--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -66,13 +66,30 @@ $padding20: rem-calc(20);
         bottom: $padding20;
         right: $padding20;
 
-        background: url('../../../assets/bg/backgroung-list-pokemon.svg') no-repeat;
+        // background: url('../../../assets/bg/backgroung-list-pokemon.svg') no-repeat;
 
         img {
           width: rem-calc(60);
         }
       }
     }
+
+    @media (max-width: 400px) {
+
+      justify-content: center;
+
+      .pokemon {
+        width: 70%;
+
+        &__image{
+          img{
+            width: rem-calc(90);
+          }
+        }
+      }
+    }
   }
 
 }
+
+
