inserindo paginação e adiconando Peso dos pokemons nos card

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <poke-header></poke-header>
 
 <main>
-  <poke-list></poke-list>
+  <poke-list (emmitPrevious)="changePage($event)" (emmitNext)="changePage($event)"></poke-list>
 </main>
