--- a/src/app/shared/poke-header/poke-header.component.html
+++ b/src/app/shared/poke-header/poke-header.component.html
@@ -1,3 +1,5 @@
 <header>
-  <img src="assets/logo.svg" alt="Logo Pokedex">
+  <a href="">
+    <img src="assets/logo.svg" alt="Logo Pokedex">
+  </a>
 </header>
