--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -4,23 +4,40 @@
   <ng-template ngFor let-pokemon [ngForOf]="Pokemons">
     <a [routerLink]="['details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status"><!--pokemon.status-->
       <section class="pokemon__status">
+        <h2> {{ pokemon.name }}</h2>
+        <ul>
+          <li *ngFor="let value of pokemon.status.types">
+            {{ value.type.name }}
+          </li>
+        </ul>
+        <span>Peso: {{ pokemon.status.weight }}</span>
+      </section>
+
+      <section class="pokemon__image">
+        <img [src]="pokemon.status.sprites.other.dream_world.front_default" [alt]="pokemon.name">
+      </section>
+    </a>
+
+<!-- será renderizado quando for feita a pesquisa de um pokemon -->
+    <a [routerLink]="['details', pokemon.id]" class="pokemon" *ngIf="!pokemon.status">
+      <section class="pokemon__status">
       <h2> {{ pokemon.name }}</h2>
       <ul>
-        <li *ngFor="let value of pokemon.status.types">
+        <li *ngFor="let value of pokemon.types">
           {{ value.type.name }}
         </li>
       </ul>
-      <span>Peso: {{ pokemon.status.weight }}</span>
-    </section>
+      <span>Peso: {{ pokemon.weight }}</span>
+      </section>
 
-    <section class="pokemon__image">
-      <img [src]="pokemon.status.sprites.other.dream_world.front_default" [alt]="pokemon.name">
-    </section>
-  </a>
+      <section class="pokemon__image">
+        <img [src]="pokemon.sprites?.other.dream_world.front_default" [alt]="pokemon.name">
+      </section>
+    </a>
   </ng-template>
 </section>
 
-<div class="pagination" *ngIf="Pokemons?.length">
+<div class="pagination" *ngIf="Pokemons?.length && Pokemons[0]?.url">
   <button class="btn" (click)="previousPage()" [disabled]="!previous">Previous</button>
   <button class="btn" (click)="nextPage()" [disabled]="!next">Next</button>
 </div>
